--- a/templates/base.html
+++ b/templates/base.html
@@ -9,14 +9,17 @@
     <!-- CSS personalizado -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
 
-    <!-- Bootstrap CSS via CDN -->
-    <script>
 
-    </script>
+    <!-- Bootstrap CSS via CDN -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+
+    <!-- Bootstrap JS via CDN -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
-
     <!-- Bloco para o conteúdo específico da página -->
     {% block content %}
     {% endblock %}
@@ -31,8 +34,5 @@
     </footer>
     {% endblock %}
 
-    <!-- Bootstrap JS via CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz4fnFO9gybPWsG10U1cA6vJ6uD3E4JjhrzW9m5j7xjRnYoP5Vx+sfD5hku" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-pzjw8f+ua7Kw1TIq0OaH7A44cAdj3JtK58c4Z6JhTkPB2p6l6J2smW8f5yPe7V7f" crossorigin="anonymous"></script>
 </body>
 </html>
