--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,12 @@
     <!-- Bootstrap CSS via CDN -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <!-- Import do Bootstrap JS via CDN -->
 
-    <!-- Bootstrap JS via CDN -->
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <!-- Import do Bootstrap JS via CDN -->
 
 </head>
 
@@ -33,6 +36,27 @@
         </div>
     </footer>
     {% endblock %}
+
+    <script>
+    document.addEventListener("DOMContentLoaded", function() {
+        var botaoAnonimo = document.getElementById("toggle-anonimo");
+        var infoDenunciante = document.getElementById("denunciante-info");
+
+        botaoAnonimo.addEventListener("click", function() {
+            if (infoDenunciante.classList.contains("hidden")) {
+                // Se a pessoa escolheu se identificar chama essa função
+                infoDenunciante.classList.remove("hidden");
+                botaoAnonimo.textContent = "Quero permanecer anônimo";
+            } else {
+                // Se quiser ficar anônimo, vai chamar essa função
+                infoDenunciante.classList.add("hidden");
+                botaoAnonimo.textContent = "Quero me identificar";
+            }
+        });
+    });
+
+
+    </script>
 
 </body>
 </html>
