--- a/static/style.css
+++ b/static/style.css
@@ -66,6 +66,9 @@ textarea {
     border-radius: 4px;
 }
 
+#card .card {
+    border-radius: 15px !important;
+}
 
 textarea {
     resize: vertical;
