--- a/static/style.css
+++ b/static/style.css
@@ -142,3 +142,18 @@ footer {
     height: 10px;
     padding: 10px;
 }
+
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex-grow: 1;
+}
