--- a/templates/formulario_denuncia.html
+++ b/templates/formulario_denuncia.html
@@ -4,27 +4,29 @@
 {% block title %}Denúncia de Maus-Tratos a Animais{% endblock %}
 
 {% block content %}
-<header class="bg-light py-5">
+<header class="bg-light py-5 position-relative">
     <div class="container text-center">
+        <a href="{% url 'painel_denuncias' %}"
+           class="btn btn-success rounded-pill mt-3 position-absolute top-0 end-0 m-3">Administração</a>
+        <br>
         <h1>Denúncia de Maus-Tratos a Animais</h1>
         <p>Preserve a vida e o bem-estar dos animais. Sua denúncia pode salvar uma vida!</p>
     </div>
 </header>
 
 <main class="container my-5">
-    {% block messages %}
     {% if messages %}
-    <div class="alert alert-info">
+    <div class="alert {% if 'error' in message.tags %}alert-danger{% else %}alert-success{% endif %} alert-dismissible fade show" role="alert">
         {% for message in messages %}
         <div class="message {% if message.tags %}{{ message.tags }}{% endif %}">
             {{ message }}
         </div>
         {% endfor %}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     {% endif %}
-    {% endblock %}
 
-    <form action="" method="POST" enctype="multipart/form-data" class="denuncia-form">
+    <form action="{% url 'denuncia_create' %}" method="POST" enctype="multipart/form-data" class="denuncia-form">
         {% csrf_token %}
 
         <section>
@@ -47,7 +49,6 @@
                 }
             </style>
 
-            </div>
             <div class="form-group">
                 {{ form.nome.label_tag }}
                 {{ form.nome }}
