--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,10 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    
+
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    
+
     <!-- CSS personalizado -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
 
@@ -38,7 +38,11 @@
     {% endblock %}
 
     <!-- Bootstrap Bundle with Popper -->
+    <!-- Escolha apenas uma versão do Bootstrap JS, recomendo a mais recente -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Bloco de scripts personalizados -->
+    {% block scripts_personalizados %}{% endblock %}
 
     <script>
     document.addEventListener("DOMContentLoaded", function() {
